--- a/.classpath
+++ b/.classpath
@@ -65,6 +65,7 @@
 	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/struts2-json-plugin-2.3.24.jar"/>
 	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/struts2-spring-plugin-2.3.24.jar"/>
 	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/xwork-core-2.3.24.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/gson-2.6.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/gson-2.6.2.jar"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v8.0"/>
 	<classpathentry kind="output" path="WebContent/WEB-INF/classes"/>
 </classpath>
