--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -32,14 +32,12 @@
         
     </filter-mapping>
 
-
-
     
       <welcome-file-list>
-    
-    
     <welcome-file>manage.jsp</welcome-file>
-    
   </welcome-file-list>
-  
+   <error-page>
+     <error-code>404</error-code>    
+     <location>/error/errorpage.html</location>  
+  </error-page>
 </web-app>
